# openq-ng

./: .hgignore  AUTHORS  ChangeLog  ChangeLog.md  Makefile.am  Makefile.mingw  ProjectHome.md  TortoiseHg.md  TortoiseHg_Simple_Usage.md  buddy_info.c  buddy_info.h  buddy_list.c  buddy_list.h  buddy_opt.c  buddy_status.c  buddy_status.h  char_conv.c  crypt.c  file_trans.c  group.c  group.h  group_find.c  group_free.c  group_im.c  group_info.c  group_internal.c  group_internal.h  group_join.c  group_network.c  group_opt.c  header_info.c  header_info.h  im.c  login_logout.c  packet_parse.c  qq.c  qq.h  qq_base.c  qq_base.h  qq_crypt.c  (+15 more)
branches/original/: AUTHORS  Makefile.am  buddy_info.h  buddy_list.c  buddy_list.h  buddy_opt.c  buddy_opt.h  buddy_status.c  buddy_status.h  char_conv.c  crypt.c  file_trans.c  file_trans.h  group.c  group.h  group_admindlg.c  group_conv.c  group_free.c  group_hash.c  group_im.c  group_im.h  group_info.c  group_join.c  group_network.c  group_opt.c  group_search.c  header_info.c  header_info.h  im.c  im.h  infodlg.c  ip_location.c  keep_alive.c  login_logout.c  login_logout.h  qq.c  qq.h  qq_proxy.c  recv_core.c  send_core.c  (+8 more)
history/: repo-trunk-darcs-20080806.tbz2  repo-trunk-hg-20080806.tbz2
old/: openQ-0.3.1.tar.bz2  qq-ver-0.1.tbz  qq-ver-0.2.1.tbz  qq-ver-0.2.2.tbz  qq-ver-0.2.3.tbz  qq-ver-0.2.4.1.tbz  qq-ver-0.2.4.tbz  qq-ver-0.2.5.tbz  qq-ver-0.2.6.1.tbz  qq-ver-0.2.6.2.tbz  qq-ver-0.2.6.5.tbz  qq-ver-0.2.6.6.tbz  qq-ver-0.2.6.9.tbz  qq-ver-0.2.7.1.tbz  qq-ver-0.2.7.tbz  qq-ver-0.2.tbz  qq-ver-0.3.0-p1.tbz  qq-ver-0.3.0-p2.tbz
patches/: pidgin2.5.4_compact_build.patch
patches/config/: CMakeLists.txt  compile_libqq_with_mingw.txt  pkgconfig_env.reg
patches/gaim/beta2/: Readme.txt
patches/gaim/beta6/: openq-0.3.2_gaim-2.0.0-0.beta6.extra_dbg.patch
patches/gaim/gaim_openq_po/: gaim-po.patch  q032_gaim200b3.gmo.bz2  zh_CN-gb3_qq.po
patches/gaim/gmo/: q032_1-gaim200b.gmo  q032_gaim200b3.gmo
patches/gaim/qq_face/make_face/: openq-face_makefile.patch
patches/gaim/qq_face/make_face/newface/: makeface.sh  mono.sh
patches/gaim/qq_face/make_face/newface/scaled/: scale.sh
patches/gaim/qq_face/make_face/newface/scaled/renamed/: make_face  rename.sh
patches/pidgin/: local.mak  pidgin_compact_build_latest.patch  udp_patch_for_pidgin_2.5.0.patch
trunk/: ChangeLog  buddy_info.c  buddy_info.h  buddy_list.c  buddy_list.h  buddy_memo.c  buddy_memo.h  buddy_opt.c  file_trans.c  group_im.c  group_im.h  group_info.c  group_join.c  im.c  im.h  qq.c  qq.h  qq_base.c  qq_define.h  qq_network.c  qq_process.c  qq_trans.c  qq_type.h  send_file.c
